# trade-tools

./: .env.example  .gitignore  main.py  pyproject.toml
.codebuddy/: CODEBUDDY.md
.codebuddy/notes/: FAQ.md  dev_records.md  experience.md  ideas.md
.codebuddy/plans/: phase1-test-documentation_9e5b4ab7.md  phase2-development_ffbb3996.md  phase3-development_aea042d5.md
.codebuddy/rules/: codebuddy.mdc  核心文件.mdc
alignment/: ai_constitution.md  decision_log.md  interview_progress.md  iteration_trajectory.md  monitor.py  orchestrator.py  orchestrator_design.md  questionair.md
alignment/tests/: conftest.py  test_orchestrator_harness.py
config/: default.yaml  strategy_weights.json
design/: 01-data-layer.md  03-signal-filter.md  04-risk-manager.md  07-backtest-module.md  08-monitor-layer.md
designs/design_v1/: 05-execution-engine.md
designs/design_v2/: 00-overview.md  02-strategy-engine.md  04-risk-manager.md  06-portfolio-tracker.md  09-infrastructure.md  10-market-data-store.md  13-signal-ranker.md  CHANGELOG.md  claude_review.md  glm_review.md
doc/: phase1-test.md  phase2-summary.md  phase4-summary.md
examples/: phase1_backtest.py  phase5_e2e.py
iterations/iteration_1/: code_diff.patch  full_response.md  heartbeat_log.txt  prompt_template.md  run_script.py  verify_script.py
iterations/iteration_10/: code_diff.patch  full_response.md  gate_status.json  git_status.txt  prompt_template.md  result.json  spec.md  summary.md  tool_calls.json  untracked_diff.patch  untracked_files.json
iterations/iteration_11/: code_diff.patch  full_response.md  gate_status.json  git_status.txt  prompt_template.md  result.json  spec.md  summary.md  tool_calls.json  untracked_diff.patch  untracked_files.json
iterations/iteration_12/: code_diff.patch  full_response.md  gate_status.json  git_status.txt  prompt_template.md  result.json  spec.md  summary.md  tool_calls.json  untracked_diff.patch  untracked_files.json
iterations/iteration_13/: code_diff.patch  full_response.md  gate_status.json  git_status.txt  prompt_template.md  result.json  spec.md  summary.md  tool_calls.json  untracked_diff.patch  untracked_files.json
iterations/iteration_14/: code_diff.patch  full_response.md  gate_status.json  git_status.txt  prompt_template.md  result.json  spec.md  summary.md  tool_calls.json  untracked_diff.patch  untracked_files.json
iterations/iteration_15/: spec.md  summary.md
iterations/iteration_16/: code_diff.patch  full_response.md  gate_status.json  git_status.txt  prompt_template.md  result.json  spec.md  summary.md  tool_calls.json
iterations/iteration_17/: code_diff.patch  full_response.md  gate_status.json  git_status.txt  prompt_template.md  result.json  spec.md  summary.md  tool_calls.json
iterations/iteration_18/: spec.md  summary.md
iterations/iteration_2/: code_diff.patch  full_response.md  prompt_template.md  result.json
iterations/iteration_3/: code_diff.patch  full_response.md  prompt_template.md  result.json  tool_calls.json
iterations/iteration_4/: code_diff.patch  deployment_report.md  full_response.md  prompt_template.md  result.json  spec.md  summary.md  tool_calls.json
iterations/iteration_5/: code_diff.patch  full_response.md  prompt_template.md  result.json  spec.md  summary.md  tool_calls.json
iterations/iteration_6/: code_diff.patch  full_response.md  gate_status.json  prompt_template.md  result.json  spec.md  summary.md  tool_calls.json
mytrader/: .env.example  .gitignore  README.md  __init__.py  diag_filter.py  main.py  mytrader_data.db  pyproject.toml  scan_orchestrator.py
tests/: test_execution.py  test_integration_live.py  test_market_data_store.py  test_monitor.py  test_reconciliation.py  test_risk_manager.py  test_scan_orchestrator.py  test_scheduler.py  test_strategy.py
(+216 files in other folders)
