[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mytrader"
version = "0.1.0"
description = "Lightweight intraday trading system for HK/US equities"
requires-python = ">=3.11"
dependencies = [
    # Data
    "yfinance>=0.2.40",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",       # Parquet 读写
    # Strategy / Indicators
    "pandas-ta>=0.4.71b0",   # 需 Python 3.12+
    # Backtest
    "vectorbt>=0.26.1",
    # Config
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "PyYAML>=6.0.1",
    # Persistence
    "sqlalchemy>=2.0",        # SQLite 成交记录 + 持仓快照
    # Scheduling (Phase 3 定时任务)
    "apscheduler>=3.10.0",       # 盘前/盘中/盘后定时 job
    # HTTP (Phase 3 通知推送)
    "httpx>=0.27.0",             # Telegram/企业微信 Webhook 推送
    # Logging
    "loguru>=0.7.2",
    # Visualization (回测报告)
    "plotly>=5.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mytrader*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
