[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mytrader"
version = "0.5.0"
description = "Full-auto quantitative trading system for US equities (S&P 500 + Nasdaq 100)"
requires-python = ">=3.12"
dependencies = [
    # ── Data ──────────────────────────────────────────────────────────
    "yfinance>=1.4.0",           # 数据源（fallback / 回填补缺）
    "pandas>=2.3.0",
    "numpy>=2.2.0",
    "pyarrow>=24.0.0",           # Parquet 缓存（旧版 v1 缓存）

    # ── Strategy / Indicators ─────────────────────────────────────────
    "pandas-ta>=0.4.71b0",       # 需 Python 3.12+（3.11 有兼容问题）

    # ── Backtest ──────────────────────────────────────────────────────
    "vectorbt>=1.0.0",           # ⚠️ 1.0.0 API 与旧版不兼容，见 dev_records

    # ── Local Time-Series DB (Phase 5) ───────────────────────────────
    "duckdb>=1.5.0",             # 回测批量列式读取（sqlite_scan）

    # ── Config ────────────────────────────────────────────────────────
    "pydantic>=2.6.0",
    "pydantic-settings>=2.6.0",
    "PyYAML>=6.0.1",

    # ── Persistence ───────────────────────────────────────────────────
    "sqlalchemy>=2.0",           # SQLite 持仓记录 + MarketDataStore

    # ── Scheduling ────────────────────────────────────────────────────
    "apscheduler>=3.10.0",       # 盘前/盘中/盘后 job + 月度 Walk-Forward

    # ── HTTP / Notifications ──────────────────────────────────────────
    "httpx>=0.27.0",             # Telegram / 企业微信 Webhook 推送

    # ── Logging ───────────────────────────────────────────────────────
    "loguru>=0.7.2",

    # ── Visualization ─────────────────────────────────────────────────
    "plotly>=6.0.0",             # 回测报告 HTML
]

[project.optional-dependencies]
# 开发 / 测试
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

# 券商接入（需单独申请 API 账号后安装）
brokers = [
    "alpaca-py>=0.40.0",         # Alpaca 美股（semi_auto / auto 模式）
    "ib-insync>=0.9.86",         # IBKR 港美股（需本地 TWS/Gateway）
]

# 可视化面板
dashboard = [
    "streamlit>=1.30.0",         # Phase 4 Streamlit Dashboard
]

[project.scripts]
mytrader = "mytrader.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mytrader*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]               # line-length 由 formatter 控制

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-q"
